06-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-env
  labels:
    environment: development
    tier: application
