k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-express-app
  namespace: production
  labels:
    app: node-express-app
spec:
  type: NodePort
  selector:
    app: node-express-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30080
  sessionAffinity: None
